[metadata]
name = piaplib
version = 0.2.3
author = Mr. Walls
author-email = reactive-firewall@users.noreply.github.com
summary = Beta python tools for PiAP
description-file = README.rst
home-page = https://github.com/reactive-firewall/PiAP-python-tools.git

[bdist_wheel]
universal=1

[files]
packages = piaplib

