[metadata]
name = piaplib
version = 0.4.3
author = Mr. Walls
author-email = reactive-firewall@users.noreply.github.com
summary = Beta python tools for PiAP
description-file = README.md
home-page = https://github.com/reactive-firewall/PiAP-python-tools.git
license = MIT
license_file = LICENSE.rst
long_description = file: README.md
long_description_content_type = text/markdown

[bdist_rpm]
url = https://github.com/reactive-firewall/PiAP-python-tools.git

[bdist_wheel]
universal=1

[files]
packages = find:*.py

[options]
py_modules = piaplib
python_requires = >=2.7, !=3.0.*, !=3.1.*
